--- a/nodes/dxl-client.html
+++ b/nodes/dxl-client.html
@@ -28,22 +28,22 @@
   RED.nodes.registerType('dxl-client', {
     category: 'config',
     defaults: {
-      configfile: {value: '', required: true},
+      configFile: {value: '', required: true},
       name: {value: ''},
-      keepalive: {value: 1800, validate: RED.validators.number()},
-      reconnectdelay: {value: 1, validate: RED.validators.number()}
+      keepAliveInterval: {value: 1800, validate: RED.validators.number()},
+      reconnectDelay: {value: 1, validate: RED.validators.number()}
     },
     label: function () {
       return this.name || 'dxl client'
     },
     oneditprepare: function () {
-      if (typeof this.keepalive === 'undefined') {
-        this.keepalive = 1800
-        $('#node-config-input-keepalive').val(this.keepalive)
+      if (typeof this.keepAliveInterval === 'undefined') {
+        this.keepAliveInterval = 1800
+        $('#node-config-input-keepAliveInterval').val(this.keepAliveInterval)
       }
-      if (typeof this.reconnectdelay === 'undefined') {
-        this.reconnectdelay = 1
-        $('#node-config-input-reconnectdelay').val(this.reconnectdelay)
+      if (typeof this.reconnectDelay === 'undefined') {
+        this.reconnectDelay = 1
+        $('#node-config-input-reconnectDelay').val(this.reconnectDelay)
       }
     }
   })
@@ -51,20 +51,20 @@
 
 <script type="text/x-red" data-template-name="dxl-client">
     <div class="form-row node-input-client">
-        <label for="node-config-input-configfile"><i class="icon-tag"></i> Config file</label>
-        <input type="text" id="node-config-input-configfile" placeholder="Config file">
+        <label for="node-config-input-configFile"><i class="icon-tag"></i> Config file</label>
+        <input type="text" id="node-config-input-configFile" placeholder="Config file">
     </div>
     <div class="form-row">
         <label for="node-config-input-name"><i class="fa fa-tag"></i> Name</label>
         <input type="text" id="node-config-input-name" placeholder="Name">
     </div>
     <div class="form-row">
-        <label for="node-config-input-keepalive" style="width: 150px"><i class="fa fa-clock-o"></i> Keep alive</label>
-        <input type="text" id="node-config-input-keepalive" style="width: 100px">
+        <label for="node-config-input-keepAliveInterval" style="width: 150px"><i class="fa fa-clock-o"></i> Keep alive</label>
+        <input type="text" id="node-config-input-keepAliveInterval" style="width: 100px">
     </div>
     <div class="form-row">
-        <label for="node-config-input-reconnectdelay" style="width: 150px"><i class="fa fa-clock-o"></i> Reconnect delay</label>
-        <input type="text" id="node-config-input-reconnectdelay" style="width: 100px">
+        <label for="node-config-input-reconnectDelay" style="width: 150px"><i class="fa fa-clock-o"></i> Reconnect delay</label>
+        <input type="text" id="node-config-input-reconnectDelay" style="width: 100px">
     </div>
 </script>
 
