--- a/nodes/dxl-response.html
+++ b/nodes/dxl-response.html
@@ -46,7 +46,10 @@
        <dd> The DXL <a href="https://opendxl.github.io/opendxl-client-javascript/Request.html" target="_blank">Request</a> message that this node is providing a response for. A DXL service node sets this property for the request it receives from the DXL fabric.</dd>
 
        <dt class="optional">error <span class="property-type">object</span></dt>
-       <dd> If this property is present and its object contains a <i>message</i> property, the response is delivered to the DXL fabric as an <a href="https://opendxl.github.io/opendxl-client-javascript/ErrorResponse.html" target="_blank">ErrorResponse</a>. The contents of the <i>message</i> property is set as the payload in the error response. The <i>error</i> property is most often by Node-RED itself when a flow error occurs.
+       <dd> If this property is present and its object contains a <i>message</i> property, the response is delivered to the DXL fabric as an <a href="https://opendxl.github.io/opendxl-client-javascript/ErrorResponse.html" target="_blank">ErrorResponse</a>. The contents of the <i>message</i> property is set as the payload in the error response. The <i>error</i> property is most often by Node-RED itself when a flow error occurs.</dd>
+
+       <dt class="optional">dxlError <span class="property-type">object</span></dt>
+       <dd> If this property and the <i>error</i> property are both present and the <i>dxlError</i> object contains a <i>code</i> property, the contents of the <a href="https://opendxl.github.io/opendxl-client-javascript/ErrorResponse.html#errorCode" target="_blank">errorCode</a> in the error response will be set to the value of the <code>dxlError.code</code> property.</dd>
     </dl>
     <h3>Details</h3>
     <p>If the input message does not contain an <i>error.message</i> property, a DXL <a href="https://opendxl.github.io/opendxl-client-javascript/Response.html" target="_blank">Response</a> message is sent with the <code>msg.payload</code> as the payload.
